--- a/.gitconfig
+++ b/.gitconfig
@@ -1,17 +1,19 @@
 [alias]
-	st = status
-	staged = diff --cached
-	br = branch
-	co = checkout
-	cob = checkout -b
-	df = diff
-	lp = log -p
-	cp = cherry-pick
-	cpa = cherry-pick --abort
-	cpc = cherry-pick --continue
-	cpq = cherry-pick --quit
-	anc = !git add . && git commit -m
-	on = !git merge --no-ff --no-commit
-	off = merge --abort
-	cl = clean -f -d
-	cod = checkout -- .
+	st 		= status
+	staged 	= diff --cached
+	br 		= branch
+	co 		= checkout
+	cob 	= checkout -b
+	df 		= diff
+	lp 		= log -p
+	cp 		= cherry-pick
+	cpa 	= cherry-pick --abort
+	cpc 	= cherry-pick --continue
+	cpq 	= cherry-pick --quit
+	ac 		= !git add . && git commit
+	anc 	= !git add . && git commit -m
+	on 		= !git merge --no-ff --no-commit
+	off 	= merge --abort
+	cl 		= clean -f -d
+	cod 	= checkout -- .
+	rev 	= !git revert --no-e
